infrastructure/openproject/seeder.yml
apiVersion: v1
kind: Pod
metadata:
  name: seeder
  namespace: openproject
spec:
  containers:
    - args:
        - ./docker/prod/seeder
      image: openproject/community:11
      name: seeder
      volumeMounts:
        - mountPath: /var/openproject/assets
          name: efs-pvc-op
  restartPolicy: OnFailure
  volumes:
    - name: efs-pvc-op
      persistentVolumeClaim:
        claimName: opdata
