infrastructure/openproject/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: openproject/community:11
        args:
        - ./docker/prod/worker
        volumeMounts:
          - mountPath: /var/openproject/assets
            name: efs-pvc-op
      volumes:
        - name: efs-pvc-op
          persistentVolumeClaim:
            claimName: opdata
