infrastructure/openproject/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/pgdata
            name: efs-pvc-pg
      volumes:
        - name: efs-pvc-pg
          persistentVolumeClaim:
            claimName: pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: openproject
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    nodePort: 30432
