infrastructure/openproject/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: openproject/community:11
        args:
        - ./docker/prod/proxy
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: openproject
spec:
  type: LoadBalancer
  selector:
    app: proxy
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30457
