infrastructure/openproject/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openproject-service
  namespace: openproject
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: proxy
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 80
        path: /*
